--- a/concept.html
+++ b/concept.html
@@ -3,7 +3,6 @@
 
 <head>
   <!-- head内の要素についてメモを残しましょう。 -->
-
   <!-- 文字コード -->
   <meta charset="utf-8" />
   <!-- IEに最新の挙動をさせる -->
@@ -13,24 +12,19 @@
   <!-- ページタブに表示される、サイトのタイトル -->
   <title>あな持ち | あなたの持ち物写真展</title>
 
-  <meta name="description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
+  <meta name="description"
+    content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
   <meta name="keywords" content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ" />
 
-  <!-- sns関連のmetaタグ -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
-  <meta property="og:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
-  <meta property="og:site_name" content="あな持ち" />
-  <meta property="og:url" content="https://anamochi.yano/" />
-  <meta property="og:image" content="./img/item/ランタン.jpg" />
 
   <!-- sns関連のmetaタグ -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
-  <meta property="og:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
+  <meta property="og:description"
+    content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
   <meta property="og:site_name" content="あな持ち" />
   <meta property="og:url" content="https://anamochi.yano/" />
-  <meta property="og:image" content="./img/item/ランタン.jpg" />
+  <meta property="og:image" content="./img/item/first_visual01.jpg" />
 
   <!-- フェイスブック -->
   <meta property="fb:app_id" content="(facebookID番号)" />
@@ -40,14 +34,14 @@
   <meta name="twitter:site" content="@anamochi" />
   <meta name="twitter:title" content="あな持ち | あなたの持ち物写真展" />
   <meta name="twitter:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
-  <meta name="twitter:image" content="./img/item/ランタン.jpg" />
+  <meta name="twitter:image" content="./img/item/first_visual01.jpg" />
 
   <!-- icon -->
-  <link rel="icon" sizes="192x192" href="./img/icon/シャッターアイコン4 (2).png" />
+  <link rel="icon" sizes="192x192" href="./img/icon/site_icon.png" />
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/common.css" media="all" />
-  <link rel="stylesheet" href="css/WhatsSite.css" media="all" />
+  <link rel="stylesheet" href="css/concept.css" media="all" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese" rel="stylesheet" />
 </head>
 
@@ -59,16 +53,16 @@
 
     <div class="site_concept">
       <p class="conseptimg">
-        <img src="./img/item/cofeemill.jpg" alt="愛用品" />
+        <img src="./img/item/Introduction02.jpg" alt="愛用品" />
       </p>
       <h1>主役は、あなたの愛用品。</h1>
       <h2>―　思い入れのあるモノでWeb個展を　―</h2>
       <p>
         なんとなくいつも使っているペン、お気に入りのコート、見飽きた仕事道具・・・<br>
         私たちの身の回りには、たくさんの物に溢れています。<br>
-        あなたの持ち物の中には、<br>「思い出の品」や「なんか愛着のあるもの」、<br>そんなちょっとした思い入れのある持ち物はありますか。<br><br>
-        『あな持ち』は、<br>あなたのお気に入り道具をおしゃれに紹介できる写真展を<br>無料で気軽に楽しむことができる、<br>写真好きのためのサービス（予定）です。<br>
-        現在も製作中ですが、<br>誰でも簡単に、<br>そして自由にWeb個展を開催できる場所になることを目指します。
+        あなたの持ち物の中には<br>「思い出の品」や「なんか愛着のあるもの」<br>そんなちょっとした思い入れのある持ち物はありますか。<br><br>
+        『あな持ち』は<br>あなたのお気に入り道具をおしゃれに紹介できる写真展を<br>無料で気軽に楽しむことができる<br>写真好きのためのサービス（予定）です。<br>
+        現在も製作中ですが<br>誰でも簡単に<br>そして自由にWeb個展を開催できる場所になることを目指します。
       </p>
     </div>
 
@@ -142,46 +136,6 @@
   <script src="./js/jQuery.js"></script>
   <script src="./js/fadein.js"></script>
 
-  <!-- ここからタイルレイアウト＆フィルター機能の設定。なかなか頑張ったと思う。 -->
-  <script src="./js/isotope.pkgd.min.js"></script>
-
-  <script>
-    $(function () {
-      //読み込み完了後0.2秒待ってからisotopeする
-      var cnt = 0
-      var waiting = setInterval(function () {
-        if (cnt == 1) {
-          var $container = $('#container')
-
-          $('#container').isotope({
-            // 以下、isotopeのオプション
-            itemSelector: '.item',
-            // percentPosition: true,
-            layoutMode: 'masonry',
-            masonry: {
-              columnWidth: 220
-              // isFitWidth: true //親要素の幅に合わせてカラム数を自動調整するかしないか
-            }
-          })
-
-          // jQueryを使って、クリックイベントを追加（以下はフィルター機能）
-          $('#filters').on('click', 'button', function () {
-            //クリックしたボタンのdata-filterの値を変数に格納
-            var filterValue = $(this).attr('data-filter')
-            //ここでオプションのfilterを発動
-            //date-filterの値を使ってフィルタリング
-            $container.isotope({
-              filter: filterValue
-            })
-          })
-
-          // cntが1でないならば、0.2秒（200ms）waitする
-          clearInterval(waiting)
-        }
-        cnt++
-      }, 200)
-    })
-  </script>
 </body>
 
 </html>
