--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <script>
-  $(".menu-trigger").on("click", function() {
+  $(".menu-trigger").on("click", function () {
     if ($(this).hasClass("active")) {
       $(this).removeClass("active");
       $("#menu_nav").slideUp();
@@ -15,7 +15,7 @@
     <li class="gnav-item item1"><a href="./index.html">あな持ち</a></li>
     <li class="gnav-item item2"></li>
     <li class="gnav-item item3">
-      <a href="./allgallery.html"><img src="img/icon/kensaku.png"/></a>
+      <a href="./allgallery.html"><img src="img/icon/kensaku.png" /></a>
     </li>
     <li>
       <div id="menu_head">
@@ -46,19 +46,13 @@
           </ul>
           <ul id="sns_menu-list">
             <li class="nav_sns-menu">
-              <a href="https://twitter.com/?lang=ja"
-                ><img src="./img/icon/iconmonstr-twitter-2-32_navi.png"
-              /></a>
+              <a href="https://twitter.com/?lang=ja"><img src="./img/icon/iconmonstr-twitter-2-32_navi.png" /></a>
             </li>
             <li class="nav_sns-menu">
-              <a href="https://twitter.com/?lang=ja"
-                ><img src="./img/icon/facebook.png"
-              /></a>
+              <a href="https://twitter.com/?lang=ja"><img src="./img/icon/facebook.png" /></a>
             </li>
             <li class="nav_sns-menu">
-              <a href="https://twitter.com/?lang=ja"
-                ><img src="./img/icon/instagram.png"
-              /></a>
+              <a href="https://twitter.com/?lang=ja"><img src="./img/icon/instagram.png" /></a>
             </li>
           </ul>
         </div>
